--- a/manifest.json
+++ b/manifest.json
@@ -3,24 +3,28 @@
   "name": "Test Extension",
   "version": "0.0",
   "offline_enabled": true,
-
   "background": {
     "persistent": false,
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
-
-  "content_scripts": [{
-    "matches": ["*://*/*"],
-    "js": ["content.js"],
-    "run_at": "document_idle",
-    "all_frames": false
-  }],
-
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*/*"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "run_at": "document_idle",
+      "all_frames": false
+    }
+  ],
   "browser_action": {
     "default_title": "Test Extension",
     "default_popup": "popup.html"
   },
-
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
